# kapacity

./: .gitignore  README.md  constants.py  main.py  pyproject.toml  test_main.py
out_test/: data.csv
