[tool.poetry]
name = "kapacity"
version = "0.1.0"
description = ""
authors = ["Tony Benoy <me@tonybenoy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
typer = {extras = ["all"], version = "^0.6.1"}
pandas = "^1.5.1"
matplotlib = "^3.6.1"
dash = "^2.6.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pylint = "^2.15.5"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
